--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=simple-crud
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:users
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=gaformario
 spring.datasource.password=
+
+jwt.secret-key=${JWT_SECRET_KEY}
+jwt.issuer=${JWT_ISSUER}
 
 server.port = 8081
