--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,20 @@
 spring.application.name=simple-crud
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:users
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=gaformario
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://user-database-postgres.ct8qik2ci0l2.us-east-2.rds.amazonaws.com:5432/usersdb
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+
+management.endpoint.health.show-details=always
 
 jwt.secret-key=${JWT_SECRET_KEY}
 jwt.issuer=${JWT_ISSUER}
 
-server.port = 8081
+server.port=8081
