--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=simple-crud
 
-spring.datasource.url=jdbc:postgresql://user-database-postgres.ct8qik2ci0l2.us-east-2.rds.amazonaws.com:5432/usersdb
+spring.datasource.url=jdbc:postgresql://${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
